refactor: Comment 생성/수정/삭제를 위한 전용 DAO 제거